--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:VeKUTZU5UO/uzU9R6E2lGXqu6NWlFn2H+YP+XQnF2/A=
 APP_DEBUG=true
-APP_URL=http://localhost
+
+APP_URL=http://ragnoria.localhost
+API_URL=http://api.ragnoria.localhost
+
+WEBSOCKET_PROTOCOL=ws
+WEBSOCKET_HOST=127.0.0.1
+WEBSOCKET_PORT=6001
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
