--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Ragnoria
 APP_ENV=local
-APP_KEY=base64:VeKUTZU5UO/uzU9R6E2lGXqu6NWlFn2H+YP+XQnF2/A=
+APP_KEY=
 APP_DEBUG=true
 
 APP_URL=http://ragnoria.localhost
@@ -17,7 +17,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=ragnoria
 DB_USERNAME=root
 DB_PASSWORD=
 
